--- a/css/creative.css
+++ b/css/creative.css
@@ -113,7 +113,7 @@ aside {
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
     color: #158cc6!important;
-    background-color: transparent;
+    background-color: #fff;
 }
 
 .navbar-default .nav > li.active>a:hover,
@@ -124,11 +124,11 @@ aside {
 @media(min-width:768px) {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
-        background-color: transparent;
+        background-color: #fff;
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: rgba(255,255,255,.7);
+        color: #158cc6;
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -138,7 +138,7 @@ aside {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,.7);
+        color: #000;
     }
 
     .navbar-default .nav > li>a:hover,
@@ -208,7 +208,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,.7);
+    color: rgba(0,0,0,1);
 }
 
 @media(min-width:768px) {
