--- a/css/creative.css
+++ b/css/creative.css
@@ -193,6 +193,11 @@ header .header-content {
     text-align: center;
 }
 
+header img {
+    max-width: 100%;
+    height: auto;
+}
+
 header .header-content .header-content-inner h1 {
     margin-top: 0;
     margin-bottom: 0;
